--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/almoxarifado
+spring.datasource.url=jdbc:mysql://localhost:3306/almoxarifado?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Configurações JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
