--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=almoxarifado
 
 spring.flyway.enabled=false
 
-spring.profiles.active=test
+spring.profiles.active=dev
 
 spring.jpa.open-in-view=true
